stockpilot-ms-main-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-stockpilot-ms-main
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  stockpilot-ms-main

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockpilot-ms-main
spec:
  selector:
    matchLabels:
      app: stockpilot-ms-main
  replicas: 1
  template:
    metadata:
      labels:
        app: stockpilot-ms-main
    spec:
      nodeName: node22
      containers:
      - name: stockpilot-ms-main
        image: lakshanbanneheke/stockpilot-ms-main:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
