stockpilot-ms-stock-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-stockpilot-ms-stock
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  stockpilot-ms-stock

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockpilot-ms-stock
spec:
  selector:
    matchLabels:
      app: stockpilot-ms-stock
  replicas: 1
  template:
    metadata:
      labels:
        app: stockpilot-ms-stock
        category: mandatory
    spec:
      containers:
      - name: stockpilot-ms-stock
        image: lakshanbanneheke/stockpilot-ms-stock:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
